[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/UI/HeartUIFull.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/HeartUIEmpty.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UIHealth.gd" type="Script" id=3]

[node name="UIHealth" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Heart1" type="TextureProgress" parent="."]
margin_right = 65.0
margin_bottom = 52.0
max_value = 1.0
value = 1.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
nine_patch_stretch = true

[node name="Heart2" type="TextureProgress" parent="."]
margin_left = 67.0
margin_right = 132.0
margin_bottom = 52.0
max_value = 1.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
nine_patch_stretch = true

[node name="Heart3" type="TextureProgress" parent="."]
margin_left = 134.0
margin_right = 199.0
margin_bottom = 52.0
max_value = 1.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
nine_patch_stretch = true

[node name="Heart4" type="TextureProgress" parent="."]
margin_left = 200.0
margin_right = 265.0
margin_bottom = 52.0
max_value = 1.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
nine_patch_stretch = true
